--- a/SampleApp/Cargo.toml
+++ b/SampleApp/Cargo.toml
@@ -6,4 +6,9 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-sdl2 = "0.34.5"
+wgpu = "0.9"
+futures = "0.3.15"
+
+[dependencies.sdl2]
+version = "0.34.5"
+features = ["raw-window-handle"]
