--- a/SampleApp/Cargo.toml
+++ b/SampleApp/Cargo.toml
@@ -12,3 +12,7 @@ futures = "0.3.15"
 [dependencies.sdl2]
 version = "0.34.5"
 features = ["raw-window-handle"]
+
+[dependencies.bytemuck]
+version = "1.4.0"
+features = [ "derive" ]
