--- a/SampleApp/Cargo.toml
+++ b/SampleApp/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2018"
 [dependencies]
 wgpu = "0.9"
 futures = "0.3.15"
+image = "0.23.14"
+anyhow = "1.0.35"
 
 [dependencies.sdl2]
 version = "0.34.5"
