--- a/SampleApp/Cargo.toml
+++ b/SampleApp/Cargo.toml
@@ -8,7 +8,13 @@ edition = "2018"
 [dependencies]
 wgpu = "0.9"
 futures = "0.3.15"
+image = "0.23.14"
+anyhow = "1.0.35"
 
 [dependencies.sdl2]
 version = "0.34.5"
 features = ["raw-window-handle"]
+
+[dependencies.bytemuck]
+version = "1.4.0"
+features = [ "derive" ]
