--- a/SampleApp/Cargo.toml
+++ b/SampleApp/Cargo.toml
@@ -10,6 +10,7 @@ wgpu = "0.9"
 futures = "0.3.15"
 image = "0.23.14"
 anyhow = "1.0.35"
+cgmath = "0.18.0"
 
 [dependencies.sdl2]
 version = "0.34.5"
