--- a/SampleApp/Cargo.toml
+++ b/SampleApp/Cargo.toml
@@ -7,15 +7,12 @@ edition = "2018"
 
 [dependencies]
 wgpu = "0.9"
+wgpu-types = { version = "0.9.0", features = ["serde"] }
 futures = "0.3.15"
 image = "0.23.14"
 anyhow = "1.0.35"
-cgmath = "0.18.0"
-
-[dependencies.sdl2]
-version = "0.34.5"
-features = ["raw-window-handle"]
-
-[dependencies.bytemuck]
-version = "1.4.0"
-features = [ "derive" ]
+cgmath = { version = "0.18.0", features = ["serde"] }
+serde = { version = "1.0.126", features = ["derive"] }
+serde_json = "1.0.64"
+sdl2 = { version = "0.34.5", features = ["raw-window-handle"]}
+bytemuck = { version = "1.4.0", features = ["derive"]}
