--- a/SampleApp/Cargo.toml
+++ b/SampleApp/Cargo.toml
@@ -16,3 +16,4 @@ serde = { version = "1.0.126", features = ["derive"] }
 serde_json = "1.0.64"
 sdl2 = { version = "0.34.5", features = ["raw-window-handle"]}
 bytemuck = { version = "1.4.0", features = ["derive"]}
+anymap = "0.12.1"
