--- a/SampleApp/Cargo.toml
+++ b/SampleApp/Cargo.toml
@@ -17,3 +17,4 @@ serde_json = "1.0.64"
 sdl2 = { version = "0.34.5", features = ["raw-window-handle"]}
 bytemuck = { version = "1.4.0", features = ["derive"]}
 anymap = "0.12.1"
+env_logger = "0.9.0"
